--- a/home1.html
+++ b/home1.html
@@ -32,7 +32,7 @@
                     </ul>
                 </div>
             </li>
-            <li><a href="about.html">ABOUT </a></li>
+            <li><a href="about.html">ABOUT US </a></li>
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
