--- a/index.html
+++ b/index.html
@@ -1,58 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel="stylesheet" href="about.css">
-    <title>about</title>
+    <title>Home</title>
 </head>
+
 <body>
-  
-
     <nav class="navbar">
-        <ul class="left-side">
-            <li><a href="#">QUOTES</a></li>
-        </ul>
+        <div class="logo">
+            QUOTES
+        </div>
 
-        <ul class="right-side">
+        <ul>
             <li><a href="home1.html">HOME</a></li>
+            <li><a href="#">TOPICS<i class="fa-solid fa-caret-down"></i></a>
+                <div class="submenu">
+                    <ul>
+                        <li><a href="motivational.html">Motivational</a></li>
+                        <li><a href="#">Attitude</a></li>
+                        <li><a href="#">Inspirational</a></li>
+                        <li><a href="#">Best</a></li>
+                    </ul>
+                </div>
+            </li>
             <li><a href="about.html">ABOUT US</a></li>
             <li><a href="contact.html">CONTACT</a></li>
-         
         </ul>
     </nav>
-    <div class="about">
-        <h2>ABOUT US</h2>
-    </div>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-6">
-                <img src="image24.jpg" alt="">
-            </div>
+            <div class="hero">
+                <h1>The Quotes</h1>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="slider">
+                            <div class="image">
+                                <input type="radio" name="slide" id="img8" checked>
+                                <input type="radio" name="slide" id="img9">
+                                <input type="radio" name="slide" id="img10">
+                                <input type="radio" name="slide" id="img25">
 
-            <div class="col-6">
-                <div class="para">
-              <p>Motivational Quote is the largest, most user friendly quotation site on the web. We are a quality educational resource and provide free access to our extensive database of prominent historical figures and today's newsmakers-famous celebraties, athletes, politician, authors and other public figures.<br>
-                 Our content , combined with its ease of use and ease of access,makes the world of quotations simple and fun. We attract students, writers, journalists, media professionals and quote-lovers of all ages. Motivating Quotes and our other sites are free services, supported by and revenue generated from ads that appear on our sites.</p>
-            </div>
+                                <img src="image8.png" class="m1" alt="img8">
+                                <img src="image9.png" class="m2" alt="img9">
+                                <img src="image10.png" class="m3" alt="img10">
+                                <img src="image25.jpg" class="m4" alt="img25">
+                            </div>
+                            <div class="dots">
+                                <label for="img8"></label>
+                                <label for="img9"></label>
+                                <label for="img10"></label>
+                                <label for="img25"></label>
+                            </div>
+                        </div>
+
+                        <!-- <div class="slider">
+                            <figure>
+                                <div class="slide">
+                                    <img src="image8.png" alt="">
+                                </div>
+                                <div class="slide">
+                                    <img src="image9.png" alt="">
+                               </div>
+                                <div class="slide">
+                                    <img src="image12.png" alt="">
+                                </div>
+                                <div class="slide">
+                                    <img src="image10.png" alt="">
+                                </div>
+                            </figure>
+                        </div> -->
+
+                    </div>
+                    <div class="col-6">
+                        <h2>Quotes<br> Generator</h2>
+                        <p>Welcome to our Website to get daily quotes on one click</p>
+                        <a href="motivational.html" class="btn">Get started</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="images">
+                    <img src="dark1.png" alt="">
+                </div>
+                <div class="text">
+                    A quote is an exact copy of someone else's words, usually enclosed in quotation marks and credited to the original author or speaker.
+                    Quote means to repeat the exact words of a speaker or an author. A quote is also a passage or statement repeated in this way. Quote means to cite something as a form of proof. Quote has several other senses as a verb and a noun.
+                    <!-- What is it about motivational quotes that make them so endearing? Every driven person eventually
+                    figures out that there's a whole lot of feel-good time wasters out there that suck us because they
+                    feel like work, and browsing endless lists of motivational phrases are no exception. And yet,
+                    there's hidden value in finding a concise expression that perfectly distills our own beliefs.<br>
+                    Motivational quotes often feel like our own opinions making a return visit, just augmented by
+                    someone with writing talent. And the right quote at the right time can change things—words
+                    matter, and motivating phrases can encourage us to get up, overcome tough times, take action,
+                    stop procrastinating, escape our comfort zone, motivate a team, invest in personal growth, start
+                    a business, and do the hard work that needs doing. -->
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <h4><span style="color:white;">Popular</span>
+                <span style="color:rgba(242, 56, 1, 1);">Authors</span>
+            </h4>
+            <div class="col-4">
+                <img src="image1.jpg" alt="">
+                <!-- <i class="fa-solid fa-quote-left"></i> -->
+                <h6>“Dream, Dream, Dream.<br>
+                    Dreams transform into thoughts<br>
+                    and thoughts result in action.”<br>
+                    -Dr. A.P.J. Abdul Kalam</h6>
+            </div>
+            <div class="col-4">
+                <img src="image3.jpg" alt="">
+                <h6>“Do not worry about<br>
+                    your difficulties in <br>
+                    Mathematics. I can assure<br>
+                    you mine are still greater.”<br>
+                    -Albert Einstein</h6>
+            </div>
+            <div class="col-4">
+                <img src="image 4.jpg" alt="">
+                <h6>“All power is within you;<br>
+                    You can do anything<br>
+                    and everything.”<br>
+                    -Swami Vivekananda</h6>
+            </div>
+            <div class="col-4">
+                <img src="image2.jpg" alt="">
+                <h6>“When something is<br>
+                    important enough, you<br>
+                    do it even if the odds<br>
+                    are not in your favor.”<br>
+                    -Elon Musk </h6>
+            </div>
+            <div class="col-4">
+                <img src="image7.jpg" alt="">
+                <h6>“You can't cross the<br>
+                    sea merely by<br>
+                    standing and starting<br>
+                    at the water.”<br>
+                    -Rabindranath Tagore</h6>
+            </div>
+            <div class="col-4">
+                <img src="image5.jpg" alt="">
+                <h6> “The Secret of<br>
+                    getting ahead is<br>
+                    getting started.”<br>
+                    -Mark Twain</h6>
+            </div>
+        </div>
+
+
+    </div>
     <div class="footer">
         <ul class="list">
-            <li><a href="home1.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="terms.html">Terms</a></li>
             <li><a href="privacy.html">Privacy Policy</a></li>
-
-
         </ul>
         <div class="social">
             <a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
@@ -64,5 +183,7 @@
             Copyright @ 2022
         </p>
     </div>
+
 </body>
+
 </html>
